force-app/main/default/objects/SMS_OrderItem__c/SMS_OrderItem__c.object-meta.xml
<CustomObject>
    <label>SMS_OrderItem</label>
    <nameField>
        <displayFormat>SMS-{00000000}</displayFormat>
        <label>SMS_OrderItem Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS_OrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>