force-app/main/default/objects/SMS_OrderItem__c/fields/Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Id__c</fullName>
    <label>Bundle Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>