force-app/main/default/objects/SMS_OrderItem__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <label>Contract Effective Date</label>
    <type>DateTime</type>
</CustomField>