force-app/main/default/objects/SMS_OrderItem__c/fields/DiscountProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>DiscountProductRatePlanId__c</fullName>
    <label>DiscountProductRatePlanId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>