force-app/main/default/objects/SMS_OrderItem__c/fields/DiscountProductRatePlanName__c.field-meta.xml
<CustomField>
    <fullName>DiscountProductRatePlanName__c</fullName>
    <label>DiscountProductRatePlanName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>