force-app/main/default/objects/SMS_OrderItem__c/fields/IsCore__c.field-meta.xml
<CustomField>
    <fullName>IsCore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCore</label>
    <type>Checkbox</type>
</CustomField>