force-app/main/default/objects/SMS_OrderItem__c/fields/IsDiscountOnly__c.field-meta.xml
<CustomField>
    <fullName>IsDiscountOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDiscountOnly</label>
    <type>Checkbox</type>
</CustomField>