force-app/main/default/objects/SMS_OrderItem__c/fields/OneTimeProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>OneTimeProductRatePlanId__c</fullName>
    <label>OneTimeProductRatePlanId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>