force-app/main/default/objects/SMS_OrderItem__c/fields/OneTimeProductRatePlanName__c.field-meta.xml
<CustomField>
    <fullName>OneTimeProductRatePlanName__c</fullName>
    <label>OneTimeProductRatePlanName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>