force-app/main/default/objects/SMS_OrderItem__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <referenceTo>SMS_Order__c</referenceTo>
    <relationshipLabel>SMS_OrderItems</relationshipLabel>
    <relationshipName>SMS_OrderItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>