force-app/main/default/objects/SMS_OrderItem__c/fields/RecurringProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>RecurringProductRatePlanId__c</fullName>
    <label>RecurringProductRatePlanId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>