force-app/main/default/objects/SMS_OrderItem__c/fields/RecurringProductRatePlanName__c.field-meta.xml
<CustomField>
    <fullName>RecurringProductRatePlanName__c</fullName>
    <label>RecurringProductRatePlanName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>