force-app/main/default/objects/SMS_OrderItem__c/fields/Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term__c</fullName>
    <label>Renewal Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>