force-app/main/default/objects/SMS_OrderItem__c/fields/Service_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Activation_Date__c</fullName>
    <label>Service Activation Date</label>
    <type>DateTime</type>
</CustomField>