force-app/main/default/objects/SMS_OrderItem__c/fields/TermDuration__c.field-meta.xml
<CustomField>
    <fullName>TermDuration__c</fullName>
    <label>TermDuration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>