force-app/main/default/objects/SMS_OrderItem__c/fields/Zuora_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Name__c</fullName>
    <label>Zuora Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>