force-app/main/default/objects/SMS_OrderItem__c/fields/Zuora_ProductRatePlan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_ProductRatePlan_Id__c</fullName>
    <label>Zuora ProductRatePlan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>