force-app/main/default/objects/SMS_OrderItem__c/validationRules/PremiumProduct_Subscription_Jurisdiction.validationRule-meta.xml
<ValidationRule>
    <fullName>PremiumProduct_Subscription_Jurisdiction</fullName>
    <active>false</active>
    <description>Premium product&apos;s jurisdiction should be same as Subscription&apos;s Service Jurisdiction</description>
    <errorConditionFormula>IF( NOT(IsCore__c) &amp;&amp; (TEXT(Order_Id__r.MRIS_Subscription_Id__r.Service_Jurisdiction__c) !=  TEXT(Product_Service_Jurisdiction__c)), true, false)</errorConditionFormula>
    <errorMessage>Premium product should be same Subscription&apos;s Service Jurisdiction</errorMessage>
</ValidationRule>