force-app/main/default/objects/SMS_OrderItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecurringProductRatePlanName__c</columns>
    <columns>Zuora_Product_Name__c</columns>
    <columns>Zuora_ProductRatePlan_Name__c</columns>
    <columns>Order_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>